--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -9,6 +9,7 @@ font = "sans serif"
 headless = true
 enableCORS = false
 enableXsrfProtection = false
+fileWatcherType = "none"
 
 [browser]
 gatherUsageStats = false 
